Fix video controls z-index and max presenter-view size

--- a/src/components/Video/VideoGrid/VideoGrid.scss
+++ b/src/components/Video/VideoGrid/VideoGrid.scss
@@ -38,6 +38,7 @@ $main-width : mm(150);
 
         opacity   : 0;
         transition: opacity 0.5s ease-in-out;
+        z-index: 5;
 
         &.showControls {
             opacity: 1;
@@ -60,6 +61,7 @@ $main-width : mm(150);
         justify-items        : center;
         grid-gap             : 0.4em;
         align-items          : stretch;
+        z-index: 1;
     }
 
     @media only screen and (max-width: 1280px) {
@@ -116,6 +118,8 @@ $main-width : mm(150);
 
     .videos .participant.selected {
         grid-column: 1 / 6;
+        max-width: 100%;
+        max-height: 80vh;
     }
 
     .videos .participant .infoContainer {
